terraform/main.tf
provider "aws" {
  region = var.aws_region
}

# Create an EC2 Security Group
resource "aws_security_group" "k8s_sg" {
  name        = "k8s-security-group"
  description = "Allow inbound traffic for SSH, HTTP, and Kubernetes"

  ingress {
    from_port   = 22   # SSH
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80   # HTTP
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 6443   # Kubernetes API Server
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create an EC2 instance
resource "aws_instance" "project_instance" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.k8s_sg.id]

  user_data = file("install-k8s.sh")

  tags = {
    Name = "K8s-Node"
  }
}
